# journald-parser

./: CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENCE  LICENCE-MIT  README.md
.github/workflows/: tests.yml
src/: batch.rs  entry.rs  lib.rs  line.rs  parser.rs
tests/: input  realworld_scenario
